testsuite/tests/invalid_gpr/invalid_stack_mem_kind/spec.gpr
project Spec is

   package Device_Configuration is

      for CPU_Name use "cortex-m4f";

      for Memories use ("rom1", "ram1");

      for Boot_Memory use "rom1";

      for Main_Stack_Memory use "rom1";

      for Mem_Kind ("rom1") use "ROM";
      for Address  ("rom1") use "0x10";
      for Size     ("rom1") use "0x100";

      for Mem_Kind ("ram1") use "RAM";
      for Address  ("ram1") use "0x1000";
      for Size     ("ram1") use "0x100";

   end Device_Configuration;

end Spec;
